--- a/app/views/product_intros/edit.html.erb
+++ b/app/views/product_intros/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Product Intro</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @product_intro %> |
-<%= link_to 'Back', product_intros_path %>
+<%- model_class = ProductIntro -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
