--- a/app/views/product_intros/show.html.erb
+++ b/app/views/product_intros/show.html.erb
@@ -1,4 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = ProductIntro -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<%= link_to 'Edit', edit_product_intro_path(@product_intro) %> |
-<%= link_to 'Back', product_intros_path %>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:product_id) %>:</strong></dt>
+  <dd><%= @product_intro.product_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:promotion) %>:</strong></dt>
+  <dd><%= @product_intro.promotion %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+  <dd><%= @product_intro.description %></dd>
+</dl>
+
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              product_intros_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_product_intro_path(@product_intro), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              product_intro_path(@product_intro),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
