--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,18 +12,24 @@
  *
 
  */
-.login_div{
+        .login_div{
+            height: 380px;
+        }
+        .login_register_div{
             width: 400px;
-            height: 400px;
             margin: auto;
             margin-top: 40px;
             background-color: #fff;
             border:solid 1px #ddd;
             border-width: 1px;
-            border-radius: 4px 4px 0 0;
+            border-radius: 4px 4px 4px 4px;
             -webkit-box-shadow: none;
             box-shadow: none;
         }
+        .register_div{
+            height: 420px;
+        }
+
         .group_top{
             margin-top: 40px;
         }
