--- a/app/views/layouts/purestyle.html.erb
+++ b/app/views/layouts/purestyle.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Uboss" %></title>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -73,7 +73,7 @@
         </div>
     </div>
 </div>    
- 
+ <p><%= notice %></p>
           <%= yield %>
  <div class="copyright">
     <hr style="width: 50%">
