--- a/app/views/mobile_view/index.html.erb
+++ b/app/views/mobile_view/index.html.erb
@@ -1,10 +1,14 @@
-<div><%= image_tag("indexShow1.png", width: "100%") %></div>
-<div><%= image_tag("indexShow2.png", width: "100%") %></div>
-<div><%= image_tag("indexShow3.png", width: "100%") %></div>
-<div><%= image_tag("indexShow4.png", width: "100%") %></div>
-<div><%= image_tag("indexShow5.png", width: "100%") %></div>
-<div>
-<a href="#">
-	<%= image_tag("indexShow5Link.png", width: "100%") %>
-</a>
+<div style="position: fixed; top: 10%; left:70%;z-index: 300; "><a href="<%= mobile_view_login_path+'?d=1' %>"><%= image_tag("to_log_buy.png", width: "90%") %></a></div>
+<div style="position:relative;">
+	<div><%= image_tag("indexShow1.png", width: "100%") %></div>
+	<div><%= image_tag("indexShow2.png", width: "100%") %></div>
+	<div><%= image_tag("indexShow3.png", width: "100%") %></div>
+	<div><%= image_tag("indexShow4.png", width: "100%") %></div>
+	<div><%= image_tag("indexShow5.png", width: "100%") %></div>
+	<div>
+	<a href="#">
+		<%= image_tag("indexShow5Link.png", width: "100%") %>
+	</a>
+	</div>	
 </div>
+
