--- a/app/views/nodes/_form.html.erb
+++ b/app/views/nodes/_form.html.erb
@@ -23,6 +23,13 @@
     <%= error_span(@node[:user_id]) %>
   </div>
   <div class="control-group">
+    <%= f.label :order_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :order_id, :class => 'form-control' %>
+    </div>
+    <%= error_span(@node[:order_id]) %>
+  </div>
+  <div class="control-group">
     <%= f.label :name, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :name, :class => 'form-control' %>
