--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -6,6 +6,8 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
   <dd><%= @node.user_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:order_id) %>:</strong></dt>
+  <dd><%= @node.order_id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @node.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:fnode) %>:</strong></dt>
