--- a/app/views/product_intros/index.html.erb
+++ b/app/views/product_intros/index.html.erb
@@ -1,25 +1,40 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Product Intros</h1>
-
-<table>
+<%- model_class = ProductIntro -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:product_id) %></th>
+      <th><%= model_class.human_attribute_name(:promotion) %></th>
+      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @product_intros.each do |product_intro| %>
       <tr>
-        <td><%= link_to 'Show', product_intro %></td>
-        <td><%= link_to 'Edit', edit_product_intro_path(product_intro) %></td>
-        <td><%= link_to 'Destroy', product_intro, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to product_intro.id, product_intro_path(product_intro) %></td>
+        <td><%= product_intro.product_id %></td>
+        <td><%= product_intro.promotion %></td>
+        <td><%= product_intro.description %></td>
+        <td><%=l product_intro.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_product_intro_path(product_intro), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      product_intro_path(product_intro),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Product intro', new_product_intro_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_product_intro_path,
+            :class => 'btn btn-primary' %>
